--- a/config.h.in
+++ b/config.h.in
@@ -1,5 +1,8 @@
 /* config.h.in.  Generated from configure.ac by autoheader.  */
 
+/* Enable debug printing */
+#undef DEBUG
+
 /* Define to 1 if a SysV or X/Open compatible Curses library is present */
 #undef HAVE_CURSES
 
